@@ -69,7 +69,7 @@ tasks.register('configureIdeCheckstyle') {
 }
 
 // Applying this stuff, particularly the idea-ext plugin, has a cost so avoid it unless we're running in the IDE
-if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNull() == 'true') {
+if (providers.systemProperty('idea.active').getOrNull() == 'true') {
   project.apply(plugin: org.jetbrains.gradle.ext.IdeaExtPlugin)
 
   tasks.register('configureIdeaGradleJvm') {
@@ -88,7 +88,9 @@ if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNul
   tasks.register('buildDependencyArtifacts') {
     group = 'ide'
     description = 'Builds artifacts needed as dependency for IDE modules'
-    dependsOn ':client:rest-high-level:shadowJar', ':plugins:repository-hdfs:hadoop-common:shadowJar', ':plugins:repository-azure:azure-storage-blob:shadowJar'
+    dependsOn ':client:rest-high-level:shadowJar',
+      ':plugins:repository-hdfs:hadoop-client-api:shadowJar',
+      ':libs:elasticsearch-x-content:generateProviderImpl'
   }
 
   idea {
@@ -120,8 +122,8 @@ if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNul
           defaults(JUnit) {
             vmParameters = [
               '-ea',
+              '-Djava.security.manager=allow',
               '-Djava.locale.providers=SPI,COMPAT',
-              "--illegal-access=deny",
               // TODO: only open these for mockito when it is modularized
               '--add-opens=java.base/java.security.cert=ALL-UNNAMED',
               '--add-opens=java.base/java.nio.channels=ALL-UNNAMED',
@@ -129,7 +131,8 @@ if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNul
               '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED',
               '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
               '--add-opens=java.base/java.time=ALL-UNNAMED',
-              '--add-opens=java.base/java.lang=ALL-UNNAMED'
+              '--add-opens=java.base/java.lang=ALL-UNNAMED',
+              '--add-opens=java.management/java.lang.management=ALL-UNNAMED'
             ].join(' ')
           }
         }
